<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favor_accept_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_green_50"
    tools:context=".view.tabs.addFavor.FavorPublishedView">
    <!-- add above: android:background="@color/material_green_50"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:padding="20dp">

        <TextView
            android:id="@+id/title_accept_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_accept_view"
            android:background="@color/material_gray_300"
            android:clickable="true"
            android:ems="10"

            android:gravity="center_vertical|center_horizontal"
            android:lines="2"
            android:maxLines="2"
            android:text="Favor Title"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="20sp"

            app:layout_constraintBottom_toTopOf="@id/imageView_accept_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView_accept_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="@dimen/margin_accept_view"
            android:adjustViewBounds="true"
            android:contentDescription="@string/favor_img_content_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/time_location_layout_accept_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_accept_view"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:id="@+id/time_location_layout_accept_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_marginBottom="@dimen/margin_accept_view"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/details_accept_view"
            app:layout_constraintTop_toBottomOf="@id/imageView_accept_view">

            <TextView
                android:id="@+id/datetime_accept_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:clickable="true"
                android:focusable="true"
                android:text="05/29/2015 5:50 AM"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="15sp" />
            <!--
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/location_accept_view_btn"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="#FFFFFF"
                android:drawableEnd="@drawable/ic_location_on_24dp" />
            -->
            <Button
                android:id="@+id/location_accept_view_btn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:drawableEnd="@drawable/ic_location_on_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/requester_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_accept_view"
            android:background="@color/material_gray_300"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_info_outline_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/details_accept_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_location_layout_accept_view" />

        <TextView
            android:id="@+id/details_accept_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_accept_view"
            android:background="@color/material_gray_300"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|start"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:shadowRadius="0.01"
            android:text="sample description"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/accept_chat_btns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requester_name" />

        <LinearLayout
            android:id="@+id/accept_chat_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_button"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_accept_view">

            <Button
                android:id="@+id/complete_btn"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_check_box_black_24dp"
                android:text="@string/complete_favor" />

            <Button
                android:id="@+id/chat_button_accept_view"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_chat_24dp"
                android:text="@string/chat_message_detail_view" />

            <Button
                android:id="@+id/accept_button"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_thumb_up_24dp"
                android:text="@string/accept_favor" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>